chore: reorganización proyecto, referencias readme, refactirización básica